turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: '=' expected but ';' found.
  if(getCouleurSol() = Color.black){
^